force-app/main/default/objects/Account/fields/Ability__c.field-meta.xml
<CustomField>
    <fullName>Ability__c</fullName>
    <label>Ability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Print/Convert</fullName>
            </value>
            <value>
                <fullName>Influence</fullName>
            </value>
            <value>
                <fullName>Distribute</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>