force-app/main/default/objects/Account/fields/BILLNAME__c.field-meta.xml
<CustomField>
    <fullName>BILLNAME__c</fullName>
    <label>Bill To Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>