force-app/main/default/objects/Account/fields/ConvertingMethods__c.field-meta.xml
<CustomField>
    <fullName>ConvertingMethods__c</fullName>
    <label>Converting Methods</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Print</fullName>
            </value>
            <value>
                <fullName>Durst RH0600</fullName>
            </value>
            <value>
                <fullName>Epson GS 6000 EcoSol</fullName>
            </value>
            <value>
                <fullName>Blank Label Converting</fullName>
            </value>
            <value>
                <fullName>Diecutting Flat Bed</fullName>
            </value>
            <value>
                <fullName>Diecutting General</fullName>
            </value>
            <value>
                <fullName>Diecutting Kiss Cut</fullName>
            </value>
            <value>
                <fullName>Diecutting Laser</fullName>
            </value>
            <value>
                <fullName>Diecutting Perfing</fullName>
            </value>
            <value>
                <fullName>Diecutting Plotter</fullName>
            </value>
            <value>
                <fullName>Diecutting Punching</fullName>
            </value>
            <value>
                <fullName>Diecutting Rotary</fullName>
            </value>
            <value>
                <fullName>Diecutting Steel Rule</fullName>
            </value>
            <value>
                <fullName>Diecutting Thermal</fullName>
            </value>
            <value>
                <fullName>Digital Indigo</fullName>
            </value>
            <value>
                <fullName>Digital Offset Roll Form</fullName>
            </value>
            <value>
                <fullName>Digital Offset Sheet Form</fullName>
            </value>
            <value>
                <fullName>Digital Offset Xeikon</fullName>
            </value>
            <value>
                <fullName>Digital Thermal Color</fullName>
            </value>
            <value>
                <fullName>Digital Thermal Mono</fullName>
            </value>
            <value>
                <fullName>Doming</fullName>
            </value>
            <value>
                <fullName>Dye Sublimination</fullName>
            </value>
            <value>
                <fullName>Diecutting Water Jet</fullName>
            </value>
            <value>
                <fullName>Embossing</fullName>
            </value>
            <value>
                <fullName>E-Stat Wet Method</fullName>
            </value>
            <value>
                <fullName>E-Stat Dry Method</fullName>
            </value>
            <value>
                <fullName>Expanded Contents</fullName>
            </value>
            <value>
                <fullName>Fan Folding</fullName>
            </value>
            <value>
                <fullName>Flexographic</fullName>
            </value>
            <value>
                <fullName>Flexographic Solvent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>