force-app/main/default/objects/Account/fields/Country_Entity_File__c.field-meta.xml
<CustomField>
    <fullName>Country_Entity_File__c</fullName>
    <label>Country Entity File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Accounting Files</fullName>
            </value>
            <value>
                <fullName>Canada Accounting Files</fullName>
            </value>
            <value>
                <fullName>Converting Singapore Branch Accounting Files</fullName>
            </value>
            <value>
                <fullName>Converting China Branch Accounting Files</fullName>
            </value>
            <value>
                <fullName>Mexico Accounting Files</fullName>
            </value>
            <value>
                <fullName>HongKong Accounting Files</fullName>
            </value>
            <value>
                <fullName>Converting HeadQuarters Accounting Files  (India Customers)</fullName>
            </value>
            <value>
                <fullName>India Accounting Files</fullName>
            </value>
            <value>
                <fullName>Blueshift Accounting Files</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>