force-app/main/default/objects/Account/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <formula>IF(
  NOT(ISBLANK(NA_Credit_Limit__c)),
  &quot;NA: &quot;&amp;TEXT(NA_Credit_Limit__c)&amp;&apos;&apos;,&quot;&quot;)+

IF(
   AND(
       TEXT(EU_Credit_Limit__c) != &quot;&quot;,
       TEXT(NA_Credit_Limit__c) = &quot;&quot;
       ),
   &quot;EU: &quot;&amp;TEXT(EU_Credit_Limit__c),&quot;&quot;)+

IF(
   AND(
       TEXT(EU_Credit_Limit__c) != &quot;&quot;,
       TEXT(NA_Credit_Limit__c) != &quot;&quot;
       ),
    BR()&amp;&quot;EU: &quot;&amp;TEXT(EU_Credit_Limit__c),&quot;&quot;)</formula>
    <label>Credit Limit</label>
    <type>Text</type>
</CustomField>