force-app/main/default/objects/Account/fields/Creditlimit__c.field-meta.xml
<CustomField>
    <fullName>Creditlimit__c</fullName>
    <label>Credit limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>