force-app/main/default/objects/Account/fields/CUSNO__c.field-meta.xml
<CustomField>
    <fullName>CUSNO__c</fullName>
    <externalId>true</externalId>
    <label>NA Customer Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>