force-app/main/default/objects/Account/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <formula>IF(
   CUSNO__c  != &quot;&quot;
  ,&quot;NA: &quot;&amp;CUSNO__c&amp;&apos;&apos;,&quot;&quot;)+
IF(
   AND(
       EU_Customer_Code__c  != &quot;&quot;,
       CUSNO__c = &quot;&quot;
       ),
   &quot;EU: &quot;&amp;EU_Customer_Code__c,&quot;&quot;)+
IF(
   AND(
       EU_Customer_Code__c != &quot;&quot;,
       CUSNO__c != &quot;&quot;
       )
   ,BR()&amp;&quot;EU: &quot;&amp;EU_Customer_Code__c,&quot;&quot;)</formula>
    <label>Customer Code</label>
    <type>Text</type>
</CustomField>