force-app/main/default/objects/Account/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <label>Delivery Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carriage &amp; Freight</fullName>
            </value>
            <value>
                <fullName>Carriage &amp; Insurance Paid</fullName>
            </value>
            <value>
                <fullName>Carriage Paid To</fullName>
            </value>
            <value>
                <fullName>Cost Insurance &amp; Freight</fullName>
            </value>
            <value>
                <fullName>Customer Pays</fullName>
            </value>
            <value>
                <fullName>Delivered at Place</fullName>
            </value>
            <value>
                <fullName>Delivered at Terminal</fullName>
            </value>
            <value>
                <fullName>Delivery Duty Pais</fullName>
            </value>
            <value>
                <fullName>Ex Works</fullName>
            </value>
            <value>
                <fullName>Free Alongside Ship</fullName>
            </value>
            <value>
                <fullName>Free carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>