force-app/main/default/objects/Account/fields/Email_Acknowledgements__c.field-meta.xml
<CustomField>
    <fullName>Email_Acknowledgements__c</fullName>
    <label>Email - Acknowledgements</label>
    <type>Email</type>
</CustomField>