force-app/main/default/objects/Account/fields/Email_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Email_Invoices__c</fullName>
    <label>Email - Invoices</label>
    <type>Email</type>
</CustomField>