force-app/main/default/objects/Account/fields/EU_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>EU_Credit_Limit__c</fullName>
    <label>EU Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>