force-app/main/default/objects/Account/fields/EU_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>EU_Customer_Code__c</fullName>
    <externalId>true</externalId>
    <label>EU Customer Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>