force-app/main/default/objects/Account/fields/EU_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>EU_Payment_Terms__c</fullName>
    <label>EU Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 Days</fullName>
            </value>
            <value>
                <fullName>120 Days</fullName>
            </value>
            <value>
                <fullName>120 Days EOM</fullName>
            </value>
            <value>
                <fullName>14 Days</fullName>
            </value>
            <value>
                <fullName>14 Days 1%</fullName>
            </value>
            <value>
                <fullName>150 Days EOM</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>30 Days/14 Days 2% disc</fullName>
            </value>
            <value>
                <fullName>30 Days/14 Days 3% disc</fullName>
            </value>
            <value>
                <fullName>30 days/2% 10 days</fullName>
            </value>
            <value>
                <fullName>30 Days/7 Days 2% Disc</fullName>
            </value>
            <value>
                <fullName>30 Days/8 Days 3%</fullName>
            </value>
            <value>
                <fullName>30 days 2% disc</fullName>
            </value>
            <value>
                <fullName>30 days 3% disc</fullName>
            </value>
            <value>
                <fullName>30 Days 8 Days 2%</fullName>
            </value>
            <value>
                <fullName>30 Days EOM + 15 days</fullName>
            </value>
            <value>
                <fullName>30 days EOM + 7 working days</fullName>
            </value>
            <value>
                <fullName>30 Days from end of month</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
            <value>
                <fullName>45 Days/14 days 1% disc</fullName>
            </value>
            <value>
                <fullName>45 Days/14 Days 2% discount</fullName>
            </value>
            <value>
                <fullName>45 Days end of month</fullName>
            </value>
            <value>
                <fullName>50 Days from Invoice date</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>60 Days/10 Days 2%</fullName>
            </value>
            <value>
                <fullName>60 Days/10 Days 3%</fullName>
            </value>
            <value>
                <fullName>60 Days/14 Days 2% disc</fullName>
            </value>
            <value>
                <fullName>60 Days/14 Days 3% disc</fullName>
            </value>
            <value>
                <fullName>60 Days/30 Days 2%</fullName>
            </value>
            <value>
                <fullName>60 Days/30 Days 3%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>