force-app/main/default/objects/Account/fields/Last_Seq_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Seq_Id__c</fullName>
    <label>Last Seq Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>