force-app/main/default/objects/Account/fields/MAILINGUSESHIPTO__c.field-meta.xml
<CustomField>
    <fullName>MAILINGUSESHIPTO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailing Use Ship To</label>
    <type>Checkbox</type>
</CustomField>