force-app/main/default/objects/Account/fields/NA_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>NA_Credit_Limit__c</fullName>
    <label>NA Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>