force-app/main/default/objects/Account/fields/NA_Mid_Tier_Account__c.field-meta.xml
<CustomField>
    <fullName>NA_Mid_Tier_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NA Mid-Tier Account</label>
    <type>Checkbox</type>
</CustomField>