force-app/main/default/objects/Account/fields/NA_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>NA_Payment_Terms__c</fullName>
    <label>NA Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1/10 N30</fullName>
            </value>
            <value>
                <fullName>1/10 NET 45</fullName>
            </value>
            <value>
                <fullName>1/10 NET 50</fullName>
            </value>
            <value>
                <fullName>1/10 NET 60</fullName>
            </value>
            <value>
                <fullName>1/15 N30</fullName>
            </value>
            <value>
                <fullName>1/15 N45</fullName>
            </value>
            <value>
                <fullName>1/15 Net 60</fullName>
            </value>
            <value>
                <fullName>1/20N30</fullName>
            </value>
            <value>
                <fullName>1/20 NET60</fullName>
            </value>
            <value>
                <fullName>1/30 Net 120 RBP</fullName>
            </value>
            <value>
                <fullName>1/30 NET 31</fullName>
            </value>
            <value>
                <fullName>1/35 NET 45</fullName>
            </value>
            <value>
                <fullName>1.5/10 N30</fullName>
            </value>
            <value>
                <fullName>1.5/10 NET 45</fullName>
            </value>
            <value>
                <fullName>1%/15 NET 50</fullName>
            </value>
            <value>
                <fullName>1%10 Net90</fullName>
            </value>
            <value>
                <fullName>1%10 NET 90</fullName>
            </value>
            <value>
                <fullName>1%20 NET 45</fullName>
            </value>
            <value>
                <fullName>1% NET 60</fullName>
            </value>
            <value>
                <fullName>2/10 N30</fullName>
            </value>
            <value>
                <fullName>2/10 N30 CN ONLY</fullName>
            </value>
            <value>
                <fullName>2/10 N45</fullName>
            </value>
            <value>
                <fullName>2/10 N60</fullName>
            </value>
            <value>
                <fullName>2/10 N 90</fullName>
            </value>
            <value>
                <fullName>2/14 N30</fullName>
            </value>
            <value>
                <fullName>2/15 N30</fullName>
            </value>
            <value>
                <fullName>2/15 Net 45</fullName>
            </value>
            <value>
                <fullName>2/15 NET 60</fullName>
            </value>
            <value>
                <fullName>2/15 NET 90</fullName>
            </value>
            <value>
                <fullName>2/20 NET 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>