force-app/main/default/objects/Account/fields/NA_Territory_Number__c.field-meta.xml
<CustomField>
    <fullName>NA_Territory_Number__c</fullName>
    <label>NA Territory Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>