force-app/main/default/objects/Account/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad Agency</fullName>
            </value>
            <value>
                <fullName>Ad Specifier</fullName>
            </value>
            <value>
                <fullName>Co-Supplier</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Former Direct</fullName>
            </value>
            <value>
                <fullName>Installer</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>POP Producer</fullName>
                <isActive>false</isActive>
                <label>POP Producer</label>
            </value>
            <value>
                <fullName>Supplier</fullName>
                <isActive>false</isActive>
                <label>Supplier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>