force-app/main/default/objects/Account/fields/Payment_Terms_Fomrula__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Fomrula__c</fullName>
    <formula>IF(
       TEXT(NA_Payment_Terms__c) != &quot;&quot;
       ,&quot;NA: &quot;&amp;TEXT(NA_Payment_Terms__c)&amp;&apos;&apos;,&quot;&quot;)+
IF(
   AND(
       TEXT(EU_Payment_Terms__c) != &quot;&quot;,
       TEXT(NA_Payment_Terms__c) = &quot;&quot;
      ),
       &quot;EU: &quot;&amp;TEXT(EU_Payment_Terms__c),&quot;&quot;)+
IF(
   AND(
       TEXT(EU_Payment_Terms__c) != &quot;&quot;,
       TEXT(NA_Payment_Terms__c) != &quot;&quot;
       )
       ,BR()&amp;&quot;EU: &quot;&amp;TEXT(EU_Payment_Terms__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>