force-app/main/default/objects/Account/fields/Print_Details__c.field-meta.xml
<CustomField>
    <fullName>Print_Details__c</fullName>
    <label>Print Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>