force-app/main/default/objects/Account/fields/Print_Press__c.field-meta.xml
<CustomField>
    <fullName>Print_Press__c</fullName>
    <label>Print Press</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continuous Laser</fullName>
            </value>
            <value>
                <fullName>Conventional Offset</fullName>
            </value>
            <value>
                <fullName>Cut Sheet Laser</fullName>
            </value>
            <value>
                <fullName>Flash Fusion Laser</fullName>
            </value>
            <value>
                <fullName>Hot Stamping</fullName>
            </value>
            <value>
                <fullName>HP Indigo</fullName>
            </value>
            <value>
                <fullName>HP Latex</fullName>
            </value>
            <value>
                <fullName>Ion Deposition</fullName>
            </value>
            <value>
                <fullName>Solvent Inkjet</fullName>
            </value>
            <value>
                <fullName>Solvent Screen</fullName>
            </value>
            <value>
                <fullName>Thermal Transfer</fullName>
            </value>
            <value>
                <fullName>UV Flexo</fullName>
            </value>
            <value>
                <fullName>UV Inkjet (Narrow)</fullName>
            </value>
            <value>
                <fullName>UV Inkjet (Wide)</fullName>
            </value>
            <value>
                <fullName>UV Letterpress</fullName>
            </value>
            <value>
                <fullName>UV Screen</fullName>
            </value>
            <value>
                <fullName>Water Flexo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>