force-app/main/default/objects/Account/fields/Print_Technology__c.field-meta.xml
<CustomField>
    <fullName>Print_Technology__c</fullName>
    <label>Print Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>Narrow-Format Digital</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Thermal Transfer (TTR)</fullName>
            </value>
            <value>
                <fullName>Wide-Format Digital</fullName>
            </value>
            <value>
                <fullName>Water Inkjet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>