force-app/main/default/objects/Account/fields/Ratingcode__c.field-meta.xml
<CustomField>
    <fullName>Ratingcode__c</fullName>
    <label>Rating code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCOUNT CLOSED</fullName>
            </value>
            <value>
                <fullName>PROBABLE SALE POTENTIAL</fullName>
            </value>
            <value>
                <fullName>IMMEDIATE SALES POTENTIAL</fullName>
            </value>
            <value>
                <fullName>PURCHASE AUTHORITY</fullName>
            </value>
            <value>
                <fullName>LITTLE LIKELIHOOD OF SALE</fullName>
            </value>
            <value>
                <fullName>COLLECTOR</fullName>
            </value>
            <value>
                <fullName>INFLUENCES PURCHASES</fullName>
            </value>
            <value>
                <fullName>RMTE</fullName>
            </value>
            <value>
                <fullName>IMMEDIATE SALE $25M +</fullName>
            </value>
            <value>
                <fullName>NON REACHABLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>