force-app/main/default/objects/Account/fields/ReasonForInactive__c.field-meta.xml
<CustomField>
    <fullName>ReasonForInactive__c</fullName>
    <label>Reason For Inactive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>